# aws-archsmith

./: .gitignore  AGENTS.md  ARCHITECT_GUIDELINES.md  INSTRUCTIONS.md  INTRUCTIONS.md  Makefile  QA.md  README.md  START.md  archsmith  opencode.json  package-lock.json  pyproject.toml  skills-lock.json
.opencode/agents/: archsmith-build.md  archsmith-plan.md  archsmith-qa.md
.opencode/commands/: arch-bootstrap.md  arch-generate.md  arch-redefine-apply-raw.md  arch-redefine-apply.md  arch-redefine-plan.md  arch-start.md  arch-theme.md  arch-to-spec.md  arch-understand.md
.opencode/skills/drawio-redefine/: SKILL.md
.opencode/skills/drawio-understand/: SKILL.md
.opencode/skills/drawio-validate/: SKILL.md
.opencode/tools/: archsmith_bootstrap.ts  archsmith_drawio_skill.ts  archsmith_redefine_apply.ts  archsmith_redefine_apply_enhanced.ts  archsmith_redefine_plan.ts  archsmith_start_session.ts  archsmith_understand_diagram.ts  archsmith_validate.ts
architecture/raw/: baseline.drawio
docker/: Dockerfile.api  compose.api.yml  compose.yml
docs/: API.md  API_TEST_RUN.md  PRD_DRAWIO_SKILL_INTEGRACION.md  USER_GUIDE.md
examples/: api.http
scripts/: api_smoke.py  archsmith_cli.py  diagram_ops.py  generate_xml.py  opencode_api_server.py  qa_smoke.py  render.sh  session_state.py  validate_drawio.py
scripts/api/: __init__.py  db.py  schemas.py  service.py
