[tool.poetry]
name = "aws-archsmith"
version = "0.1.0"
description = "AI-first AWS architecture XML automation"
authors = ["aws-archsmith contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
psycopg = { extras = ["binary"], version = "^3.2.1" }

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
